WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273411
ASSERTION FAILED: !behaviors.containsAny({ Behavior::Break, Behavior::Continue })
https://bugs.webkit.org/show_bug.cgi?id=273411
Summary
ASSERTION FAILED: !behaviors.containsAny({ Behavior::Break, Behavior::Continu...
wgslfuzz
Reported
2024-04-29 09:49:09 PDT
On git commit e9acc98eb155a5d5a45ea8fb4e763ff4cede6eb0, compiling the attached shader program with `./wgslfuzz shader.wgsl f` triggers an assertion violation. ``` fn f() { if floor { break; } } ``` #0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44 #1 __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78 #2 __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ./nptl/pthread_kill.c:89 #3 0x00007f5d278bb8e6 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26 #4 0x00007f5d2789f8b7 in __GI_abort () at ./stdlib/abort.c:79 #5 0x000055919dbcea30 in WTFCrashWithInfo () at WTF/Headers/wtf/Assertions.h:862 #6 0x000055919dfe471c in WGSL::TypeChecker::visit (this=0x7f5d25b01620, function=...) at Source/WebGPU/WGSL/TypeCheck.cpp:727 #7 0x000055919e0a2971 in WGSL::AST::Visitor::checkErrorAndVisit<WGSL::AST::Declaration> (this=0x7f5d25b01620, x=...) at Source/WebGPU/WGSL/AST/ASTVisitor.h:135 #8 WGSL::AST::Visitor::visit (this=0x7f5d25b01620, shaderModule=...) at Source/WebGPU/WGSL/AST/ASTVisitor.cpp:51 #9 0x000055919dfd9fd2 in WGSL::TypeChecker::check (this=0x7f5d25b01620) at Source/WebGPU/WGSL/TypeCheck.cpp:439 #10 0x000055919e018f60 in WGSL::typeCheck (shaderModule=...) at Source/WebGPU/WGSL/TypeCheck.cpp:2449 #11 0x000055919e08cca1 in WGSL::staticCheck(WTF::String const&, std::optional<WGSL::SourceMap> const&, WGSL::Configuration const&)::$_2::operator()() const (this=<optimized out>) at Source/WebGPU/WGSL/WGSL.cpp:76 #12 WGSL::staticCheck (wgsl=..., configuration=...) at Source/WebGPU/WGSL/WGSL.cpp:76 #13 0x000055919e08b13d in runWGSL (options=...) at Source/WebGPU/WGSL/wgslc.cpp:122 #14 main (argc=<optimized out>, argv=<optimized out>) at Source/WebGPU/WGSL/wgslc.cpp:164
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-30 12:09:08 PDT
<
rdar://problem/127310621
>
Tadeu Zagallo
Comment 2
2024-05-10 10:34:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28396
EWS
Comment 3
2024-05-13 03:37:50 PDT
Committed
278681@main
(2e8bbb15e393): <
https://commits.webkit.org/278681@main
> Reviewed commits have been landed. Closing PR #28396 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug