ASSERTION FAILED: !behaviors.containsAny({ Behavior::Break, Behavior::Continue }) https://bugs.webkit.org/show_bug.cgi?id=273411 rdar://127310621

Reviewed by Mike Wyrzykowski.

While it's invalid for a function to have break or continue behaviors, that's a type
error, not an assertion.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
* Source/WebGPU/WGSL/tests/invalid/break.wgsl: Added.

Canonical link: https://commits.webkit.org/278681@main